Initial tweaks to template